Do a bunch of experiments, including adding a parser

--- a/sop-experiments.cabal
+++ b/sop-experiments.cabal
@@ -21,7 +21,9 @@ source-repository head
 
 common common-options
   build-depends:       base ^>= 4.13.0.0
+  build-depends:       generics-sop, QuickCheck
   
+  extensions:          TypeApplications
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
@@ -42,7 +44,7 @@ common common-options
 library
   import:              common-options
   hs-source-dirs:      src
-  exposed-modules:     SopExperiments
+  exposed-modules:     SopExperiments, SopParser
 
 test-suite sop-experiments-test
   import:              common-options
