Add a module connecting Invertible with SOP

--- a/sop-experiments.cabal
+++ b/sop-experiments.cabal
@@ -57,6 +57,7 @@ library
                      , SopParser
                      , PickleSOP
                      , HxtPickleInvertible
+                     , InvertibleSOP
                     --  , Text.XML.HXT.Arrow.Pickle.Xml.Invertible
 
 test-suite sop-experiments-test
