--- a/sop-experiments.cabal
+++ b/sop-experiments.cabal
@@ -58,6 +58,7 @@ library
                      , PickleSOP
                      , HxtPickleInvertible
                      , InvertibleSOP
+                     , PickleSopExample
                     --  , Text.XML.HXT.Arrow.Pickle.Xml.Invertible
 
 test-suite sop-experiments-test
