--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,10 @@
 name: CI
 
 # Trigger the workflow on push or pull request, but only for the master branch
-on: {}
-  # pull_request:
-  # push:
-  #   branches: [master]
+on:
+  pull_request:
+  push:
+    branches: [master]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-16.04
     strategy:
       matrix:
-        cabal: ["2.4"]
+        cabal: ["3.2.0.0"]
         ghc:
           - "8.8.3"
 
